2 files modified, 1 deleted

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
-body {
-  background: orange;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200,300,400,500,600,700,800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+section {
+  padding: 100px;
+}
+section h2 {
+  font-size: 3em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+
+section p {
+  line-height: 1.8em;
+}
+
+.parallaxBg {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
 }
