--- a/styles.css
+++ b/styles.css
@@ -26,4 +26,17 @@ section p {
   width: 100%;
   height: 500px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parallaxBg h2 {
+  position: absolute;
+  font-size: 3em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 800;
+  background: #fff;
+  padding: 0 20px;
 }
